assets/css/style.css
/* ... */
@media screen and (max-width: 950px) {
    /* Styling for get home page max screen width 950px */

    #hero-outer {
        height: 300px;
    }

    #sign-up-circle {
        width: 100px;
        height: 100px;
        font-size: 0.55em;
        bottom: 1vmin;
        right: 1vmin;
    }

    #sign-up-circle:hover {
        width: 101px;
        height: 101px;
    }

    #sign-up-text {
        padding-top: 10px;
    }

    .info-section {
        height: min(160vmin, 145vmax);
    }

    .info-section h2 {
        line-height: 50px;
        margin-bottom: 3vmin;
        font-size: 6vmin;
        letter-spacing: 2px;
        padding-top: 5px;
    }

    .info-container {
        float: none;
        margin: 0 auto;
        width: 95%;
        height: 85vmin
    }

    .info-container p {
        font-size: 3.75vmin;
    }

    .info-images {
        float: none;
        height: 50vmin;
        margin: 0 auto;
        margin-top: 20px;
    }

    #info-section-middle {
        height: min(163vmin, 150vmax);
    }

    #info-image-middle {
        float: none;
        height: 50vmin;
        margin: 0 auto;
    }

    #info-container-middle {
        float: none;
        margin: 0 auto;
        width: 95%;
        font-size: 3.75vmin;
        height: 80vmin;
        margin-top: 10px;
    }

    #info-container-middle li {
        line-height: 7vmin;
    }

    #info-section-bottom {
        height: 144vmin;
    }

    #info-section-bottom h2 {
        margin-bottom: 3vmin;
        line-height: 50px;
        font-size: 5vmin;
        letter-spacing: 2px;
    }

    /* Styling for get started page max screen width 950px */
    .four-photo-grid {
        margin: 0 5px;
    }

    .three-photo-grid {
        margin: 0 5px;
    }

    #bottom-section-grid {
        margin: 0 5px;
    }

    .instructions-container {
        margin-left: -5%;
        width: 100%;
    }

    .instruction-images-container {
        padding-right: 0;
        margin: 0 auto;
    }

    /* Styling for Sign Up page max screen width 950px */
    #signup-form {
        left: 10%;
        width: 80vw;
        height: auto;
    }

    .sign-up-button {
        width: 40%;
        margin: 20px 30% 5% 30%;
        font-size: 120%;
    }

    #signup-form h2 {
        font-size: 130%;
        margin-bottom: 2%;
    }


    /* Styling for Thank You page max width 950px */
    #thank-you-form {
        width: 80vw;
        left: 10%;
        height: 50vh;
        top: 10%;
    }

    #thank-you-form h2 {
        font-size: 225%;
    }

}

@media screen and (max-width: 950px) and (orientation: landscape) {
    .top-button{
        bottom:7vmin;
    }
    .info-section {
        height: 140vmin;
    }

    .info-container {
        height: max(60vmin, 5vmax);
    }

    .info-container p {
        font-size: min(4.5vmin, 3vmax);
    }

    #info-section-middle {
        height: 158vmin;
    }

    #info-container-middle {
        height: 75vmin;
    }

    #info-container-middle li {
        font-size: max(3.75vmin, 2.5vmax);
        line-height: max(9vmin, 5vmax);
        margin-right: 2%;
    }

    #info-section-bottom {
        height: 130vmin;
    }

    /* Styling for Get Started page max screen 950px and landscape */
    .four-photo-grid {
        margin: 0 5px;
    }

    .three-photo-grid {
        margin: 0 5px;
    }

    #bottom-section-grid {
        margin: 0 5px;
    }

    .instructions-container {
        margin-left: -5%;
        width: 100%;
    }

    .instruction-images-container {
        padding-right: 0;
        margin: 0 auto;
    }

    /* styling for Sign Up page max width 950 and landscape orientation */
    #wrapper {
        height: 200vh;
    }

    #signup-form {
        left: 10%;
        width: 80vw;
        height: auto;
    }

    /* styling for Thank You page max width 950 and landscape orientation */

    #thank-you-form {
        width: 80vw;
        left: 10%;
        height: auto;
    }
}
/* ... */

